[package]
name = "adrena-abi"
version = "1.3.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "04536725c2ea16329e84bcfe3200afd47eeeb464" } 
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "04536725c2ea16329e84bcfe3200afd47eeeb464" } 
bytemuck = "1.19.0"
anyhow = "1.0.91"
solana-program = "2.0.18"
num-traits = "0.2.19"
log = "0.4.22"
borsh = "1.5.1"
